kubernetes/apps/home/med-tracker-canary/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: med-tracker-canary
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: med-tracker-canary
      app.kubernetes.io/name: med-tracker-canary
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 80
          protocol: TCP
